# CMake

cmake_001/: readme.md
cmake_001/src/: CMakeLists.txt  main.cpp
cmake_002/: readme.md
cmake_002/src/: CMakeLists.txt  main.cpp
